[package]
name = "telera-app"
version = "0.1.0"
edition = "2021"

[dependencies]
telera-layout = { path = "../telera-layout" }
winit = "0.30.9"
rfd = "0.15.3"
wgpu = "24.0.1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.25.5"
bytemuck = { version = "1.16", features = [ "derive" ] }
glyphon = "0.8.0"
cgmath = "0.18.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
gltf = "1.4.1"
notify = "8.0.0"
strum = "0.27.1"
strum_macros = "0.27"
include_dir = "0.7.4"
bimap = "0.6.3"

[build-dependencies]
winresource = "0.1.19"

[features]
logging = ["telera-layout/parse_logger"]
drm = []
