[package]
name = "telera-app"
version = "0.4.0"
edition = "2024"

[dependencies]
telera_macros = { path = "telera_macros" }
telera-layout = { path = "../telera-layout"}
winit = "0.30.9"
rfd = "0.15.3"
wgpu = "24.0.1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.25.5"
bytemuck = { version = "1.16", features = [ "derive" ] }
glyphon = "0.8.0"
lyon = "1.0.16"
cgmath = "0.18.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
gltf = "1.4.1"
notify = "8.0.0"
include_dir = "0.7.4"
bimap = "0.6.3"
rkyv = "=0.8.10"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27"
quick-xml = "0.37.3"
csscolorparser = { version = "0.7.0", features = [ "named-colors" ] }
markdown = "1.0.0"
symbol_table = { version = "0.4.0", features = [ "global" ] }

[build-dependencies]
winresource = "0.1.19"

[features]
logging = ["telera-layout/parse_logger"]
parse_logger = []
drm = []
